# ancova-plugin

./: CITATION.cff  README.html  README.md  ancova_analysis.py  plugin.yaml  pyproject.toml  requirements.txt
examples/diann/: annotation.txt
