[tool.poetry]
name = "ancova-plugin"
version = "1.0.0"
description = "ANCOVA Analysis Plugin"
authors = ["CauldronGO Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
statsmodels = ">=0.14.0"
plotly = ">=5.18.0"
click = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
